# Morus-bassanus

./: .dockerignore  .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml
client/public/: index.html
client/src/components/: ChatContainer.jsx  ChatInput.jsx  Contacts.jsx  Logout.jsx  Welcome.jsx
client/src/pages/: Login.jsx
client/src/utils/: APIRoutes.js
dockers/: react_client_docker  react_server_docker  server_docker
scripts/: vectorize.py
server/: .env.example
server/controllers/: messageController.js  userController.js
server/models/: messageModel.js
server/routes/: auth.js
src/: logging.py  settings.py
src/agent/: bot.py  prompts.py
src/app/: api.py
src/configs/: config.yaml  definitions.py  schemas.py
src/db/: CSVreader.py  S3_pipeline.py  weaviate_vectorizer.py
ui/client/: package.json
ui/client/public/: index.html
ui/client/src/: utils.js
ui/client/src/components/: ChatContainer.jsx  ChatInput.jsx  Contacts.jsx  SetAvatar.jsx  Welcome.jsx
ui/client/src/pages/: Chat.jsx  Login.jsx  Register.jsx
ui/client/src/utils/: APIRoutes.js
ui/server/: index.js  package.json
ui/server/controllers/: messageController.js  test.json  userController.js
ui/server/models/: userModel.js
ui/server/routes/: auth.js  messages.js
